# iot-assign-2

./: LICENSE  README.md
gui-mqtt-sub/: app.js  package.json
gui-mqtt-sub-forge/: forge.config.js  package.json
gui-mqtt-sub-forge/src/: main.js
gui-mqtt-sub-tauri/: index.html  package.json
gui-mqtt-sub-tauri/src/: App.svelte  styles.css
gui-mqtt-sub-tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui-mqtt-sub-tauri/src-tauri/src/: main.rs
gui-mqtt-sub-tauri/src/lib/: subdata.js
image-recog/: recog.py
mqtt-publish/: publish.py
python-gui/: app.py
rest-api-mysql/: .env.  .env.development  .gitignore  mariadb-run.sh  package.json
rest-api-mysql/src/: index.ts
rest-api-mysql/src/controllers/: feed.controller.ts
rest-api-mysql/src/db/: config.ts
rest-api-mysql/src/models/: SensorInfo.ts
rest-api-mysql/src/routes/: feed.route.ts
restclient/: pushdata.py
